--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
-  margin: 0 auto;
-  width: 1280px;
-  height: 1217px;
+  background: #000000;
   font-family: "Inter", "Arial", sans-serif;
+  color: #ffffff;
+  margin: 0;
 }
