--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,6 +1,6 @@
 .popup__button {
   margin: 48px 36px 37px;
-  width: 358px;
+  width: 86.085%;
   height: 50px;
   background-color: #000000;
   color: #ffffff;
