--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
-  width: 430px;
-  height: 330px;
+  margin: auto;
+  width: 33.594%;
+  max-width: 100%;
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
