--- a/blocks/popup/__filed/popup__filed.css
+++ b/blocks/popup/__filed/popup__filed.css
@@ -1,7 +1,7 @@
 .popup__filed {
   display: block;
   font-weight: normal;
-  width: 358px;
-  height: 27px;
+  width: 86.085%;
+  padding-bottom: 10px;
   border-bottom: 1px solid #000000;
 }
