--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,10 +1,3 @@
 .popup_opened {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  width: 1280px;
-  height: 720px;
-  background-color: rgba(0, 0, 0, 0.5);
+  /*display: block;*/
 }
