--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,3 +1,8 @@
 .popup {
   display: none;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
