--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,22 @@
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/popup__close/popup__close.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__group/elements__group.css);
+@import url(../blocks/elements/__like-button/pseudo__like-button.css);
+@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__mask-group/elements__mask-group.css);
+@import url(../blocks/elements/__rectangle/elements__rectangle.css);
+@import url(../blocks/elements/__text/elements__text.css);
+@import url(../blocks/footer/__text/footer__text.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__line/header__line.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__about-me/profile__about-me.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
