--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,14 +1,16 @@
 .popup__button {
-  margin: 48px 36px 37px;
-  width: 86.085%;
-  height: 50px;
+  margin: 48px auto 0;
+  width: calc(238px + 120 * ((100vw - 320px) / (1280 - 320)));
+  height: calc(46px + 4 * ((100vw - 320px) / (1280 - 320)));
   background-color: #000000;
   color: #ffffff;
+  border-radius: 2px;
+  box-shadow: 0px 0px 25px;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: calc(14px + 4 * ((100vw - 320px) / (1280 - 320)));
+  line-height: calc(17px + 5 * ((100vw - 320px) / (1280 - 320)));
   text-align: center;
-  transition: opacity 0.4s;
+  transition: 0.5s;
 }
 .popup__button:hover {
   opacity: 0.8;
