--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,9 +1,32 @@
 .popup__heading {
-  margin: 34px 64px 54px 36px;
-  /*! width: 330px; */
-  /*! height: 23px; */
+  margin-bottom: 47px;
   font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: calc(18px + 6 * ((100vw - 320px) / (1280 - 320)));
+  line-height: calc(22px + 7 * ((100vw - 320px) / (1280 - 320)));
   color: #000000;
+}
+@media screen and (max-width: 1024px) {
+  .popup__heading {
+    margin-bottom: 52px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .popup__heading {
+    margin-bottom: 57px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .popup__heading {
+    margin-bottom: 62px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .popup__heading {
+    margin-bottom: 67px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .popup__heading {
+    margin-bottom: 71px;
+  }
 }
