--- a/blocks/popup/__line/popup__line.css
+++ b/blocks/popup/__line/popup__line.css
@@ -1,7 +1,7 @@
-.popup__filed {
-  display: block;
+.popup__line {
   font-weight: normal;
   width: 86.085%;
   padding-bottom: 10px;
   border-bottom: 1px solid #000000;
+  opacity: 0.2;
 }
