--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,10 @@
 .popup {
+  position: fixed;
   display: none;
+  z-index: 3;
   width: 100%;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
+  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
