--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,7 +1,16 @@
 .elements__like {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
+  background: #ffffff;
+  background-image: url(../../../images/like.svg);
+  background-repeat: no-repeat;
+  transition: 0.5s;
+  cursor: pointer;
+  width: 29px;
+  height: 19px;
+}
+.elements__like:hover {
+  opacity: 0.5;
+}
+.elements__like:active {
+  background-image: url(../../../images/like_black.svg);
+  opacity: 1;
 }
