--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,9 @@
   background: #000000;
   font-family: "Inter", "Arial", sans-serif;
   color: #ffffff;
+}
+* {
+  padding: 0;
   margin: 0;
+  border: 0;
 }
