--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,5 +1,7 @@
 .popup__heading {
-  margin-bottom: 47px;
+  align-self: start;
+  margin: 34px 0 50px 36px;
+  text-align: left;
   font-weight: 900;
   font-size: calc(18px + 6 * ((100vw - 320px) / (1280 - 320)));
   line-height: calc(22px + 7 * ((100vw - 320px) / (1280 - 320)));
@@ -7,26 +9,26 @@
 }
 @media screen and (max-width: 1024px) {
   .popup__heading {
-    margin-bottom: 52px;
+    margin: 30px 0 52px 32px;
   }
 }
 @media screen and (max-width: 768px) {
   .popup__heading {
-    margin-bottom: 57px;
+    margin: 28px 0 57px 28px;
   }
 }
 @media screen and (max-width: 425px) {
   .popup__heading {
-    margin-bottom: 62px;
+    margin: 25px 0 64px 23px;
   }
 }
 @media screen and (max-width: 375px) {
   .popup__heading {
-    margin-bottom: 67px;
+    margin: 25px 0 69px 22px;
   }
 }
 @media screen and (max-width: 320px) {
   .popup__heading {
-    margin-bottom: 71px;
+    margin-bottom: 75px;
   }
 }
