--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,7 @@
 .profile__avatar {
   width: 120px;
   height: 120px;
+  object-fit: contain;
   border-radius: 50%;
 }
 @media screen and (max-width: 450px) {
