--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  padding-top: calc(126px + 33 * ((100vw - 320px) / (1280 - 320)));
+  padding-top: 40px;
   margin-bottom: calc(36px + 15 * ((100vw - 320px) / (1280 - 320)));
   display: grid;
   grid-template-columns: 120px max-content 30px 1fr;
@@ -7,6 +7,7 @@
 }
 @media screen and (max-width: 739px) {
   .profile {
+    padding-top: 39px;
     grid-template-columns: 120px max-content 1fr;
   }
 }
