исправил после второго ревью

--- a/blocks/elements/__group/elements__group.css
+++ b/blocks/elements/__group/elements__group.css
@@ -1,6 +1,7 @@
 .elements__group {
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 25px 15px 31px 21px;
+  margin: 22px 14px 31px 21px;
 }
