--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,10 +1,13 @@
 .elements__like {
+  margin: 0;
+  padding: 0;
+  border: 0;
   background: #ffffff;
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
   transition: 0.5s;
   cursor: pointer;
-  width: 29px;
+  width: 27px;
   height: 19px;
 }
 .elements__like:hover {
