--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,4 +1,6 @@
 .elements {
+  margin: 0;
+  padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-template-rows: auto;
