--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,4 +1,6 @@
 .footer__text {
+  margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: calc(14px + 4 * ((100vw - 320px) / (1280 - 320)));
   line-height: calc(17px + 5 * ((100vw - 320px) / (1280 - 320)));
