--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,8 @@
 .header__logo {
+  margin: 0;
+  padding: 0;
   width: calc(103.74px + 38.26 * ((100vw - 320px) / (1280 - 320)));
-  margin-bottom: calc(31.6px + 9.4 * ((100vw - 320px) / (1280 - 320)));
+  margin-bottom: calc(29px + 8 * ((100vw - 320px) / (1280 - 320)));
 }
 @media screen and (max-width: 320px) {
   .header__logo {
