--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -8,7 +8,8 @@
   color: #000000;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   padding-bottom: 8px;
-}
-.form__input:first-child {
   margin-bottom: 30px;
+}
+.form__input:last-of-type {
+  margin: 0;
 }
