--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   border: 0;
+  cursor: pointer;
   background: #000000;
   background-image: url(../../../images/Add_Button.svg);
   background-repeat: no-repeat;
@@ -14,7 +15,7 @@
 .profile__add-button:hover {
   opacity: 0.6;
 }
-@media screen and (max-width: 739px) {
+@media screen and (max-width: 767px) {
   .profile__add-button {
     background-image: url(../../../images/Add_Button2.svg);
     background-repeat: no-repeat;
