--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -13,7 +13,7 @@
 .elements__like:hover {
   opacity: 0.5;
 }
-.elements__like:active {
+.elements__like_active {
   background-image: url(../../../images/like_black.svg);
   opacity: 1;
 }
