--- a/blocks/elements/__mask-group/elements__mask-group.css
+++ b/blocks/elements/__mask-group/elements__mask-group.css
@@ -1,7 +1,7 @@
 .elements__mask-group {
   margin: 0;
   padding: 0;
-  object-fit: contain;
+  /*object-fit: contain;*/
   width: 100%;
   height: 282px;
   border-radius: 10px 10px 0 0;
