--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,7 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/form/form.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/_opened/_adding-card/popup_opened_card.css);
@@ -17,6 +17,7 @@
 @import url(../blocks/elements/__group/elements__group.css);
 @import url(../blocks/elements/__delete/elements__delete.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__mask-group/elements__mask-group.css);
 @import url(../blocks/elements/__rectangle/elements__rectangle.css);
 @import url(../blocks/elements/__text/elements__text.css);
