--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,7 +6,10 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .5s  ease-out;
 }
