--- a/pages/index.css
+++ b/pages/index.css
@@ -2,12 +2,18 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/form/form.css);
+@import url(../blocks/popup/__container/popup__container-image.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__text/_image/popup__text_image.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/_opened/_adding-card/popup_opened_card.css);
 @import url(../blocks/popup/_opened/_profile/popup_opened_profile.css);
+@import url(../blocks/popup/_opened/_image/popup_opened_image.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__button/_popup/_close/form__button_popup_close-image.css);
 @import url(../blocks/form/__button/_popup/_close/form__button_popup_close.css);
 @import url(../blocks/form/__button/_popup/_close/form__button_popup_close-card.css);
 @import url(../blocks/form/__button/_popup/_save/form__button_popup_save.css);
