--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,6 +1,6 @@
 .elements__like {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 23px;
   border: 0;
   background: #ffffff;
   background-image: url(../../../images/like.svg);
