--- a/blocks/elements/__mask-group/elements__mask-group.css
+++ b/blocks/elements/__mask-group/elements__mask-group.css
@@ -1,9 +1,9 @@
 .elements__mask-group {
   margin: 0;
   padding: 0;
-  /*object-fit: contain;*/
   width: 100%;
   height: 282px;
+  min-height: 282px;
   border-radius: 10px 10px 0 0;
   cursor: pointer;
 }
