--- a/blocks/form/__button/_close/form__button_popup_close.css
+++ b/blocks/form/__button/_close/form__button_popup_close.css
@@ -14,12 +14,21 @@
   cursor: pointer;
   transition: 0.5s;
 }
-.form__button_popup_close:hover {
+
+.form__button_close:hover {
   opacity: 0.6;
 }
+
 @media screen and (max-width: 320px) {
-  .form__button_popup_close {
+  .form__button_close {
     top: -37px;
     right: -0.5vw;
+  }
+}
+
+@media screen and (max-height: 400px) {
+  .form__button_close {
+    top: -5vh;
+    right: -5vw;
   }
 }
