--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,4 +9,11 @@
   background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+
+}
+
+@media screen and (max-height: 400px) {
+  .popup__container {
+    height: 85vh;
+  }
 }
