--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -9,28 +9,39 @@
   line-height: calc(22px + 7 * ((100vw - 320px) / (1280 - 320)));
   color: #000000;
 }
+
 @media screen and (max-width: 1024px) {
   .popup__heading {
     margin: 30px 0 52px 32px;
   }
 }
+
 @media screen and (max-width: 768px) {
   .popup__heading {
     margin: 28px 0 57px 28px;
   }
 }
+
 @media screen and (max-width: 425px) {
   .popup__heading {
     margin: 25px 0 64px 23px;
   }
 }
+
 @media screen and (max-width: 375px) {
   .popup__heading {
     margin: 25px 0 69px 22px;
   }
 }
+
 @media screen and (max-width: 320px) {
   .popup__heading {
     margin-bottom: 75px;
+  }
+}
+
+@media screen and (max-height: 350px) {
+  .popup__heading {
+    margin: 34px 0 7vh 36px;
   }
 }
