--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,15 +1,14 @@
 .form__input {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: none;
+  outline: none;
+  position: relative;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
   color: #000000;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-  padding-bottom: 8px;
-  margin-bottom: 30px;
-}
-.form__input:last-of-type {
-  margin: 0;
+  padding-bottom: 7px;
+  transition: 0.3s;
 }
