--- a/src/blocks/elements/__like/elements__like.css
+++ b/src/blocks/elements/__like/elements__like.css
@@ -1,5 +1,5 @@
 .elements__like {
-  margin: 0;
+  margin: 0 0 0 5px;
   padding: 0 0 0 23px;
   border: 0;
   background: #ffffff;
@@ -10,7 +10,7 @@
   width: 27px;
   height: 19px;
 }
+
 .elements__like:hover {
   opacity: 0.5;
 }
-
