--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,13 +3,6 @@
   padding: 0;
   width: 120px;
   height: 120px;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 50%;
-}
-@media screen and (max-width: 450px) {
-  .profile__avatar {
-    grid-row: 1;
-    grid-column: 2;
-    justify-self: center;
-  }
 }
