--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,8 +4,10 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container/_card-delete/popup__container_card-delete.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__heading/_card-delete/popup__heading_card-delete.css);
 @import url(../blocks/popup/__text/_image/popup__text_image.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/_opened/_adding-card/popup_opened_card.css);
@@ -25,6 +27,7 @@
 @import url(../blocks/elements/__group/elements__group.css);
 @import url(../blocks/elements/__delete/elements__delete.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__mask-group/elements__mask-group.css);
 @import url(../blocks/elements/__rectangle/elements__rectangle.css);
@@ -37,6 +40,8 @@
 @import url(../blocks/profile/__about-me/profile__about-me.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-box/profile__avatar-box.css);
+@import url(../blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
